# Lima-camera-marccd

./: .gitignore  CMakeLists.txt  pom.xml
doc/: index.rst
include/: MarccdBinCtrlObj.h  MarccdBufferCtrlObj.h  MarccdCamera.h  MarccdDetInfoCtrlObj.h  MarccdInterface.h  MarccdReader.h  MarccdRoiCtrlObj.h  MarccdSyncCtrlObj.h
python/: __init__.py
sip/: MarccdCamera.sip  MarccdInterface.sip
src/: Makefile  MarccdBinCtrlObj.cpp  MarccdBufferCtrlObj.cpp  MarccdCamera.cpp  MarccdDetInfoCtrlObj.cpp  MarccdInterface.cpp  MarccdReader.cpp  MarccdRoiCtrlObj.cpp  MarccdSyncCtrlObj.cpp
